--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,12 @@
 name = "StippleMarkdown"
 uuid = "2b41e42f-53d3-436c-aed0-ebb7c31b58f1"
-version = "0.0.1"
+version = "0.1.1"
 
 [deps]
 Stipple = "4acbeb90-81a0-11ea-1966-bdaff8155998"
+StippleUI = "a3c5d34a-b254-4859-a8fa-b86abb7e84a3"
+
 [compat]
 Stipple = "0.28, 0.29, 0.30"
+StippleUI = "0.23"
 julia = "1.6"
